--- a/templates/Login.html
+++ b/templates/Login.html
@@ -1,22 +1,22 @@
-    <form>
+    <form ng-submit="myFunction()" >
       <table align="center" border="2">
         <caption>Login Form </caption>
 
         <tr>
             <td>Email: </td>
-            <td><input type="email" ng-model = "email"></input>
+            <td><input type="email" ng-model = "email" required></input>
 
             </td>
+          </tr>
             <tr>
               <td>Password:</td>
-              <td><input type="password" ng-model="password"></input>
+              <td><input type="password" ng-model="password" required></input>
 
             </td>
             </tr>
-            <td><input type="submit" ng-model="submit" value="Submit"></input></td>
+            <td><input type="submit" ng-model="submit" value="Submit"  ng-click="submit()"></input></td>
           <td align="center"><a ui-sref="register">Register</a></td>
           </tr>
-
-
       </table>
+         <div align="center"> {{msg}} </div>
     </form>
