--- a/templates/register.html
+++ b/templates/register.html
@@ -1,32 +1,32 @@
-  <form>
+  <form ng-submit="myFunction()" >
       <table align="center" border="2">
         <caption>Registration Form </caption>
 
         <!-- <tr>
           <td> First Name: </td>
           <td> <input type="text" ng-model="firstname"></td>
-        </tr>
-        <tr>
-          <td> Last Name: </td>
-          <td> <input type="text" ng-model="lastname"></td>
         </tr> -->
         <tr>
+          <td>Name: </td>
+          <td> <input type="text" ng-model="name" required></input>
+          </td>
+        </tr>
+        <tr>
           <td>Email: </td>
-          <td><input type="email" ng-model = "email"></input>
-
+          <td><input type="email" ng-model = "email" required></input>
           </td>
         </tr>
         <tr>
           <td>Password:</td>
-          <td><input type="password" ng-model="password"></input>
-
+          <td><input type="password" ng-model="password" required></input>
         </td>
         </tr>
 
         <tr>
-          <td><input type="submit" ng-model="submit" value="Submit"></input></td>
+          <td><input type="submit" ng-model="submit" value="Submit" ng-click="submit()" ></input></td>
         <td align="center"><a ui-sref="login" >Login</a></td>
-        </tr>
+      </tr>
 
       </table>
+       <div align="center"> {{msg}} </div>
     </form>
