--- a/templates/Login.html
+++ b/templates/Login.html
@@ -15,7 +15,9 @@
             </td>
             </tr>
             <td><input type="submit" ng-model="submit" value="Submit"  ng-click="submit()"></input></td>
-          <td align="center"><a ui-sref="register">Register</a></td>
+          <td align="center">
+
+            <a ui-sref="register">Register</a></td>
           </tr>
       </table>
          <div align="center"> {{msg}} </div>
