--- a/templates/ReadJsonData.html
+++ b/templates/ReadJsonData.html
@@ -8,7 +8,7 @@
           <th>Address </th>
           <th>DOB </th>
         </tr>
-        <tr ng-repeat = "data in information">
+        <tr ng-repeat = "data in jsonRecord">
           <td>{{ data.name + "  "}} </td>
           <td>{{ data.age + "  "}}</td>
           <td>{{data.address + "  "}}</td>
@@ -16,3 +16,4 @@
         </tr>
       </ul>
     </div>
+    <table>
